fix: created conditional render for collapse arrow (#1)

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -132,6 +132,10 @@
   flex: 1;
 }
 
+.iconRotate {
+  transform: rotate(180deg);
+}
+
 .collapseMenuItem {
   display: none;
 
